	- The variable PI should now be recognized as an actual number
	- More examples
	- Fixed a profanity in an error message
	- Division by zero now throws a readable error message (It previously resultet in "Infinity" which was not recognized as a number before, causing confusing errors
	- Added an ascii raycast example to show off the script capabilities (Take a look! Examples -> demos -> raycast)
	- Fixed an issue where 0.000 == 0 would return false
	- More minor fixes

1.9.11:
	- Fixed try command issue with loops
	- Added sqrt function (Square root)
	- Added sin, cos and tan commands (They obviously act like sin, cos and tan functions in math, arguments in degrees)
	- Added PI constant as variable
	
1.9.10:
	- You can add an array element by adding any value to an array ($array + "newElement") <- This will add a new element to an array. A short version for the "push" command
	- You can concatenate two arrays using the "+" command now
	- You can use a tenary command for shorter if statements:
		println ($condition ? "Condition is true" "Condition is false")
	- Enhanced if statements. Instead of writing this:
		if $condition {
			println "true";
		} {
			println "false";
		}
	  It will now look like this:
	  	if $condition {
	  	
	  	} else {
	  	
	  	}
	  Also elseif is now possible which wasn't even a thing before 1.9.10. The new if- command is compatible with the old version!
	  More info: file > Examples > tutorials > Variables and conditionals
	- You can use "?" as array index to let DevScript choose a random entry for you:
		colors = [black blue gray white];
		print $colors[?];
	- You can now use \n and \t inside Strings
	- You can also now put line breaks and tabs using the $n and $t variables. Example:
		println "this is one line" $n "this is another line";
		println "before tab" $t "after tab";
	- Provided more examples and better tutorials
	- Fixed an error where the "applicationListener" listener was not fired properly when a script was finished.